--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,31 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~normalize.css';
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    color: rgb(107, 107, 107);
+}
+.container {
+    max-width: 1380px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 0 auto;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
