--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -17,9 +17,9 @@
     <mat-form-field>
       <mat-label>Приоритет</mat-label>
       <mat-select formControlName="priority">
-        <mat-option value="low">Низкий</mat-option>
-        <mat-option value="middle">Средний</mat-option>
-        <mat-option value="high">Высокий</mat-option>
+        <mat-option value="Низкий">Низкий</mat-option>
+        <mat-option value="Средний">Средний</mat-option>
+        <mat-option value="Высокий">Высокий</mat-option>
       </mat-select>
     </mat-form-field>
 
