--- a/src/app/components/tasks-list/tasks-list.component.html
+++ b/src/app/components/tasks-list/tasks-list.component.html
@@ -2,7 +2,7 @@
   <!-- Position Column -->
   <ng-container matColumnDef="position">
     <th mat-header-cell *matHeaderCellDef>№</th>
-    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
   </ng-container>
 
   <!-- Name Column -->
@@ -14,7 +14,9 @@
   <!-- Weight Column -->
   <ng-container matColumnDef="deadline">
     <th mat-header-cell *matHeaderCellDef>Срок выполнения</th>
-    <td mat-cell *matCellDef="let element">{{ element.deadline }}</td>
+    <td mat-cell *matCellDef="let element">
+      {{ element.deadline | date }}
+    </td>
   </ng-container>
 
   <!-- Symbol Column -->
@@ -32,7 +34,11 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  <tr
+    mat-row
+    *matRowDef="let row; columns: displayedColumns"
+    (click)="click(row.id)"
+  ></tr>
 </table>
 
 <button (click)="openDialog()" mat-button class="add-task">
